--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import BlogPost from "../components/BlogPost.astro";
 const pageTitle = "My Astro Learning Blog";
-const allPosts = await Astro.glob("../pages/posts/*.md");
+const allPosts = Object.values(await import.meta.glob('./posts/*.md', { eager: true }));
 ---
 
 <BaseLayout pageTitle={pageTitle}>
