--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,6 +8,6 @@ const allPosts = await Astro.glob("../pages/posts/*.md");
 <BaseLayout pageTitle={pageTitle}>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
-    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+    {allPosts.map((post:any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
   </ul>
 </BaseLayout>
