--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,14 +1,14 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
 const allPosts = await Astro.glob("../posts/*.md");
-const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+const tags = [...new Set(allPosts.map((post:any) => post.frontmatter.tags).flat())];
 const pageTitle = "Tag Index";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <div class="tags">
     {
-      tags.map((tag) => (
+      tags.map((tag:string) => (
         <p class="tag">
           <a href={`/tags/${tag}`}>{tag}</a>
         </p>
