Update the complete branch to match the docs (#39)
* update dependencies and remove start script
* add ts-check in astro config
* update image url and alt in posts
* convert Greeting component to jsx to match docs & fix Typescript error
* update Footer styles to match docs
* add missing optional chaining operator in ThemeIcon
* update MarkdownPostLayout to match docs (add tags, update pubDate)
* remove unnecessary await, style, type in tags pages

--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -1,4 +1,5 @@
 ---
+
 ---
 
 <button id="themeToggle">
@@ -17,7 +18,7 @@
 </button>
 
 <style>
-   #themeToggle {
+  #themeToggle {
     border: 0;
     background: none;
   }
@@ -39,8 +40,8 @@
 
 <script is:inline>
   const theme = (() => {
-    const localStorageTheme = localStorage?.getItem("theme") ?? '';
-    if (['dark', 'light'].includes(localStorageTheme)) {
+    const localStorageTheme = localStorage?.getItem("theme") ?? "";
+    if (["dark", "light"].includes(localStorageTheme)) {
       return localStorageTheme;
     }
     if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
@@ -67,5 +68,5 @@
 
   document
     .getElementById("themeToggle")
-    .addEventListener("click", handleToggleClick);
+    ?.addEventListener("click", handleToggleClick);
 </script>
