--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -3,13 +3,16 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import BlogPost from "../../components/BlogPost.astro";
 
 export async function getStaticPaths() {
-  const allPosts = Object.values(await import.meta.glob('../posts/*.md', { eager: true }));
+  const allPosts = Object.values(
+    import.meta.glob("../posts/*.md", { eager: true })
+  );
+
   const uniqueTags = [
-    ...new Set(allPosts.map((post:any) => post.frontmatter.tags).flat()),
+    ...new Set(allPosts.map((post: any) => post.frontmatter.tags).flat()),
   ];
 
-  return uniqueTags.map((tag:string) => {
-    const filteredPosts = allPosts.filter((post:any) =>
+  return uniqueTags.map((tag) => {
+    const filteredPosts = allPosts.filter((post: any) =>
       post.frontmatter.tags.includes(tag)
     );
     return {
@@ -27,7 +30,7 @@ const { posts } = Astro.props;
   <p>Posts tagged with {tag}</p>
   <ul>
     {
-      posts.map((post:any) => (
+      posts.map((post: any) => (
         <BlogPost url={post.url} title={post.frontmatter.title} />
       ))
     }
