--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,14 +1,18 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
-const allPosts = Object.values(await import.meta.glob('../posts/*.md', { eager: true }));
-const tags = [...new Set(allPosts.map((post:any) => post.frontmatter.tags).flat())];
+const allPosts = Object.values(
+  import.meta.glob("../posts/*.md", { eager: true })
+);
+const tags = [
+  ...new Set(allPosts.map((post: any) => post.frontmatter.tags).flat()),
+];
 const pageTitle = "Tag Index";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <div class="tags">
     {
-      tags.map((tag:string) => (
+      tags.map((tag) => (
         <p class="tag">
           <a href={`/tags/${tag}`}>{tag}</a>
         </p>
@@ -24,7 +28,6 @@ const pageTitle = "Tag Index";
   .tags {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto;
   }
 
   .tag {
